[gd_scene load_steps=3 format=3 uid="uid://ck3wnx27rsqxb"]

[ext_resource type="Script" path="res://scripts/createaccountscreen.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dap64sbpa6nsy" path="res://resources/fonts/BitPotionExt.ttf" id="5"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 972.0
offset_bottom = 712.0

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
anchor_left = 0.507
anchor_top = 0.2
anchor_right = 0.507
anchor_bottom = 0.2
offset_left = -221.064
offset_top = -79.6
offset_right = 204.936
offset_bottom = 70.4
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 96
text = "TopDownShooter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorMessage" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.31
anchor_right = 0.506
anchor_bottom = 0.31
offset_left = -143.2
offset_top = -23.981
offset_right = 143.8
offset_bottom = 24.019
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Email" type="Label" parent="Panel"]
layout_mode = 0
anchor_left = 0.341
anchor_top = 0.397
anchor_right = 0.341
anchor_bottom = 0.397
offset_left = -24.1841
offset_top = -14.2
offset_right = 23.8159
offset_bottom = 13.8
text = "Email:"

[node name="EmailEnter" type="LineEdit" parent="Panel/Email"]
layout_mode = 0
anchor_left = 4.729
anchor_top = 0.5
anchor_right = 4.729
anchor_bottom = 0.5
offset_left = -167.992
offset_top = -14.0
offset_right = 168.008
offset_bottom = 14.0
caret_blink = true
caret_blink_interval = 0.5

[node name="Username" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.482
anchor_right = 0.361
anchor_bottom = 0.482
offset_left = -44.6641
offset_top = -14.2
offset_right = 45.3359
offset_bottom = 13.8
text = "Username:"

[node name="UsernameEnter" type="LineEdit" parent="Panel/Username"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.728
anchor_top = 0.5
anchor_right = 2.728
anchor_bottom = 0.5
offset_left = -150.52
offset_top = -14.0
offset_right = 150.48
offset_bottom = 17.0
max_length = 36

[node name="Password" type="Label" parent="Panel"]
layout_mode = 0
anchor_left = 0.359
anchor_top = 0.565
anchor_right = 0.359
anchor_bottom = 0.565
offset_left = -42.616
offset_top = -14.0
offset_right = 43.384
offset_bottom = 14.0
text = "Password:"

[node name="PasswordEnter" type="LineEdit" parent="Panel/Password"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.878
anchor_top = 0.625
anchor_right = 2.878
anchor_bottom = 0.625
offset_left = -150.508
offset_top = -15.5
offset_right = 150.492
offset_bottom = 12.5
max_length = 24
secret = true
caret_blink = true
caret_blink_interval = 0.5

[node name="ConfirmPassword" type="Label" parent="Panel"]
layout_mode = 0
anchor_left = 0.397
anchor_top = 0.648
anchor_right = 0.397
anchor_bottom = 0.648
offset_left = -81.5259
offset_top = -13.8
offset_right = 82.4741
offset_bottom = 14.2
text = "Confirm Password:"

[node name="CPasswordEnter" type="LineEdit" parent="Panel/ConfirmPassword"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.695
anchor_top = 0.576
anchor_right = 1.735
anchor_bottom = 0.625
offset_left = -118.98
offset_top = -14.128
offset_right = 112.46
offset_bottom = 15.5
max_length = 24
secret = true
caret_blink = true
caret_blink_interval = 0.5

[node name="CreateButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.77
anchor_right = 0.5
anchor_bottom = 0.77
offset_left = -101.5
offset_top = -18.96
offset_right = 101.5
offset_bottom = 19.04
grow_horizontal = 2
grow_vertical = 0
text = "Create Account"

[node name="Login" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.906
anchor_right = 0.5
anchor_bottom = 0.906
offset_left = -151.5
offset_top = -13.088
offset_right = 151.5
offset_bottom = 12.912
grow_horizontal = 2
grow_vertical = 0
text = "Already have an account?"

[node name="LoginButton" type="LinkButton" parent="Panel/Login"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.84
anchor_top = 0.442
anchor_right = 0.84
anchor_bottom = 0.442
offset_left = -49.52
offset_top = -11.492
offset_right = 49.48
offset_bottom = 11.508
theme_override_colors/font_color = Color(0, 0.635294, 0.423529, 1)
text = "Click Here"
